--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "Helping you get better at guitar one practice session at a time.",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/controllers/index.js",
     "build": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon server/index.js"
+    "watch": "nodemon controllers/index.js"
   },
   "engines": {
     "node": "21.6.2"
@@ -16,8 +16,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "sequelize": "^6.37.1",
+    "sequelize-cli": "^6.6.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
