--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Helping you get better at guitar one practice session at a time.",
   "main": "index.js",
   "scripts": {
-    "start": "node server/controllers/index.js",
+    "start": "node controllers/index.js",
     "build": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon controllers/index.js"
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
