working on routing

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "harryhanskat",
-    "password": null,
+    "username": "me",
+    "password": "password",
     "database": "groovemeister",
     "host": "localhost",
     "port": 5432
