--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "Helping you get better at guitar one practice session at a time.",
   "main": "index.js",
   "scripts": {
-    "start": "node controllers/index.js",
+    "start": "node index.js",
     "build": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon controllers/index.js"
+    "watch": "nodemon index.js"
   },
   "engines": {
     "node": "21.6.2"
@@ -16,10 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2",
     "uuid": "^9.0.0"
