--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,23 @@
-/.idea
-/target
-*/node_modules
-/.vscode
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-### Node ### 
-# Logs
-logs
-*.log
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
 /build
-/nyc
-/.env
-/.DS_Store
-.vscode/sessions.json
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
